# manna-server

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  manna-api.h  manna-connection.cpp  manna-connection.h  manna-handler.cpp  manna-handler.h  manna-request.cpp  manna-request.h  manna-response.cpp  manna-response.h  manna-server.cpp  manna-server.h
